--- a/_build.yml
+++ b/_build.yml
@@ -20,7 +20,7 @@ jobs:
       - task: GitHubRelease@0
         displayName: 'Create GitHub Release'
         inputs:
-          gitHubConnection: 'github-microsoftlearning-organization'
+          gitHubConnection: 'RudolfZhang'
           repositoryName: '$(Build.Repository.Name)'
           tagSource: manual
           tag: 'v$(Build.BuildNumber)'
