--- a/_build.yml
+++ b/_build.yml
@@ -20,7 +20,7 @@ jobs:
       - task: GitHubRelease@0
         displayName: 'Create GitHub Release'
         inputs:
-          gitHubConnection: 'RudolfZhangYan'
+          gitHubConnection: 'a678ac72cb6d122d72d97bde773820da81e4055c'
           repositoryName: '$(Build.Repository.Name)'
           tagSource: manual
           tag: 'v$(Build.BuildNumber)'
